--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="album">
+            <div class="card">
+                <img src="https://w0.peakpx.com/wallpaper/162/860/HD-wallpaper-polish-cover-art-album-covers-riverside-band-rock-music-progressive-rock.jpg"
+                    alt="">
+            </div>
+            <div class="outer">
+                <div class="inner">
+
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
