--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             </div>
             <div class="outer">
                 <div class="inner">
-
+                    <img src="https://w0.peakpx.com/wallpaper/162/860/HD-wallpaper-polish-cover-art-album-covers-riverside-band-rock-music-progressive-rock.jpg"
+                        alt="">
                 </div>
             </div>
         </div>
